[package]
name = "moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
cfg-if = "1.0.0"
bevy_prototype_lyon = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier2d = { version = "0.22.0", features = ["simd-stable"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.11.3"
bevy_rapier2d = { version = "0.22.0", features = ["simd-stable", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.87" }
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.features]
default = ["wee_alloc"]
